tests/valid_inputs/initialize_ptr_with_nullptr.cpp
// test that a pointer can be initialized with nullptr
int main() {
	int *p = nullptr;
}
