tests/invalid_inputs/sema/void_ptr_minus.cpp
// test that void pointer cannot be subtracted from

void f() {
	void *p;
	p - 1;
}
